examples/test/testpolicy5610.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5610
  namespace: namespace75
spec:
  podSelector:
    matchLabels:
      key46: value47
      key5: value6
      key26: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value30
      podSelector:
        matchLabels:
          key43: value22
          key11: value7
          key29: value48
